# ap-verify

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  fusion_gemini_groq_scaled.json  fusion_gemini_ollama.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  eval.yml
docs/: ERROR_TAXONOMY.md
docs/superpowers/plans/: 2026-06-20-v5-anomaly-detection.md  2026-06-20-v5-cross-detector-benchmark.md  2026-06-20-v5-duplicate-detection.md  2026-06-20-v5-vendor-master-bec.md  2026-06-21-v5-collusion.md  2026-06-21-v5-xai-explanation.md
docs/superpowers/specs/: 2026-06-20-v5-anomaly-detection-design.md  2026-06-20-v5-cross-detector-benchmark-design.md  2026-06-20-v5-duplicate-detection-design.md  2026-06-20-v5-vendor-master-bec-design.md  2026-06-21-v5-collusion-design.md  2026-06-21-v5-xai-explanation-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend/src/: App.tsx  api.ts  format.ts  styles.css  types.ts  vite-env.d.ts
frontend/src/components/: ConfidenceCard.tsx  InvoiceCard.tsx  MatchCard.tsx  ReviewView.tsx  TraceCard.tsx  UploadConsole.tsx  Verdict.tsx  Working.tsx
frontend/src/demo/: results.json
samples/: generate_samples.py  procurement.json  receivables.json
src/apverify/: __init__.py
src/apverify/application/: errors.py  observability.py  ports.py  process_invoice.py  review_payable.py  run_collections.py
src/apverify/domain/: anomaly.py  approval.py  audit.py  checks.py  collections.py  collusion.py  consistency.py  critique.py  errors.py  explanation.py  fraud.py  invoice.py  matching.py  ocr.py  procurement.py  value_objects.py  vendor_master.py
src/apverify/eval/: __init__.py  accuracy.py  accuracy_cli.py  accuracy_eval.py  anomaly_cli.py  anomaly_eval.py  anomaly_synthesis.py  bec_cli.py  bec_eval.py  bec_synthesis.py  bench_cli.py  calibration.py  calibration_cli.py  calibration_eval.py  cli.py  collusion_cli.py  collusion_eval.py  collusion_synthesis.py  cord.py  cord_cli.py  corruptor.py  dataset_eval.py  docile.py  docile_cli.py  document_gate.py  drift.py  drift_cli.py  explanation_cli.py  fraud_cli.py  fraud_eval.py  fraud_suite_cli.py  fraud_suite_eval.py  fraud_suite_synthesis.py  fraud_synthesis.py  fusion.py  fusion_cli.py  fusion_cv.py  fusion_eval.py  leaderboard.py  leaderboard_cli.py  (+8 more)
src/apverify/infrastructure/: errors.py  fallback.py  invoice_ledger.py  mapping.py  procurement_loader.py  procurement_memory.py  receivables_loader.py  receivables_memory.py  settings.py
tests/: conftest.py
tests/contract/: test_accuracy_dataset.py  test_cord_dataset.py  test_docile_dataset.py  test_gemini.py  test_groq_auditor.py  test_langfuse.py  test_mistral_extractor.py  test_renderer.py  test_tesseract.py  test_whatsapp_send.py
tests/e2e/: test_cli.py
tests/support/: __init__.py
tests/unit/application/: test_observability.py  test_ports.py  test_process_invoice.py  test_review_payable.py  test_review_payable_anomaly.py  test_review_payable_audit.py  test_review_payable_consistency.py  test_review_payable_duplicate.py  test_review_payable_vendor_risk.py  test_run_collections.py
tests/unit/domain/: test_anomaly.py  test_approval.py  test_audit.py  test_checks.py  test_collections.py  test_collusion.py  test_consistency.py  test_domain_edges.py  test_explanation.py  test_fraud.py  test_matching.py  test_ocr.py  test_value_objects.py  test_vendor_master.py
tests/unit/eval/: test_accuracy.py  test_anomaly_cli.py  test_anomaly_eval.py  test_anomaly_synthesis.py  test_bec_cli.py  test_bec_eval.py  test_bec_synthesis.py  test_calibration.py  test_calibration_eval.py  test_collusion_cli.py  test_collusion_eval.py  test_collusion_synthesis.py  test_cord.py  test_docile.py  test_document_gate.py  test_drift.py  (+16 more)
(+36 files in other folders)
