[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apverify"
version = "0.1.0"
description = "Auditable accounts-payable pipeline: vision extraction guarded by a deterministic critic."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Devansh Joshi", email = "devansh.joshi@shreemaruti.com" }]
keywords = ["accounts-payable", "invoice", "ocr", "verification", "gst"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "rich>=13.7",
    "fastapi>=0.111",
    "google-genai>=0.3",
    "httpx>=0.27",
    "groq>=0.11",
    "mistralai>=1.2,<2",
    "pytesseract>=0.3.10",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30",
    "pdf2image>=1.17",
    "pillow>=10.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "reportlab>=4.2",
]
datasets = ["datasets>=2.14"]
docile = ["docile-benchmark>=0.3"]
langfuse = ["langfuse>=2"]
anomaly = ["scikit-learn>=1.5"]

[project.urls]
Repository = "https://github.com/Devanshjoshi2804/ap-verify"
Issues = "https://github.com/Devanshjoshi2804/ap-verify/issues"

[project.scripts]
apverify = "apverify.interface.cli.main:app"
apverify-eval = "apverify.eval.cli:app"
apverify-bench = "apverify.eval.bench_cli:app"
apverify-drift = "apverify.eval.drift_cli:app"
apverify-eval-cord = "apverify.eval.cord_cli:app"
apverify-eval-docile = "apverify.eval.docile_cli:app"
apverify-eval-accuracy = "apverify.eval.accuracy_cli:app"
apverify-eval-leaderboard = "apverify.eval.leaderboard_cli:app"
apverify-eval-calibration = "apverify.eval.calibration_cli:app"
apverify-eval-fusion = "apverify.eval.fusion_cli:app"
apverify-eval-uncertainty = "apverify.eval.uncertainty_cli:app"
apverify-eval-fraud = "apverify.eval.fraud_cli:app"
apverify-eval-bec = "apverify.eval.bec_cli:app"
apverify-eval-anomaly = "apverify.eval.anomaly_cli:app"
apverify-eval-fraud-suite = "apverify.eval.fraud_suite_cli:app"
apverify-explain = "apverify.eval.explanation_cli:app"
apverify-eval-collusion = "apverify.eval.collusion_cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/apverify"]

[tool.ruff]
src = ["src", "tests"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pyflakes + pycodestyle
    "I",             # isort
    "N",             # pep8-naming
    "UP",            # pyupgrade
    "B",             # bugbear
    "C4",            # comprehensions
    "SIM",           # simplify
    "RUF",           # ruff-specific
    "PTH",           # use pathlib
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pytesseract.*", "pdf2image.*", "reportlab.*", "datasets.*", "langfuse.*", "docile.*", "sklearn.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# External SDKs are adapter boundaries; their stubs' quirks are not worth casting
# around in adapter code.
module = ["google.genai.*", "groq.*", "mistralai.*"]
follow_imports = "skip"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "contract: adapter contract tests that need external binaries or network",
]

[tool.coverage.run]
branch = true
source = ["apverify"]
